# sim-femm

./: BROCHURE.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: dependabot.yml
crates/sim-lib-femm-codec/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-codec/recipes/: book.toml
crates/sim-lib-femm-codec/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-codec/recipes/01-basics/solution-descriptor/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-codec/src/: citizen.rs  lib.rs  support.rs  tests.rs  values.rs
crates/sim-lib-femm-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-core/recipes/: book.toml
crates/sim-lib-femm-core/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-core/recipes/01-basics/model-limits/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-core/src/: error.rs  implementation.rs  lib.rs  matrix.rs  points.rs
crates/sim-lib-femm-core/src/implementation/: tests.rs
crates/sim-lib-femm-field/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-field/recipes/: book.toml
crates/sim-lib-femm-field/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-field/recipes/01-basics/potential-field/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-field/src/: implementation.rs  lib.rs
crates/sim-lib-femm-fixtures/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-fixtures/recipes/: book.toml
crates/sim-lib-femm-fixtures/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-fixtures/recipes/01-basics/parallel-plate/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-fixtures/src/: lib.rs  support.rs  tests.rs
crates/sim-lib-femm-function/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-function/recipes/: book.toml
crates/sim-lib-femm-function/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-function/recipes/01-basics/energy-function/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-function/src/: exports.rs  implementation.rs  lib.rs  model_value.rs  tests.rs
crates/sim-lib-femm-geometry/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-geometry/recipes/: book.toml
crates/sim-lib-femm-geometry/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-geometry/recipes/01-basics/rectangle-region/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-geometry/src/: implementation.rs  lib.rs
crates/sim-lib-femm-material/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-material/recipes/: book.toml
crates/sim-lib-femm-material/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-material/recipes/01-basics/air-material/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-material/src/: lib.rs
crates/sim-lib-femm-mesh/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-mesh/recipes/: book.toml
crates/sim-lib-femm-mesh/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-mesh/recipes/01-basics/tiny-triangle/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-mesh/src/: implementation.rs  lib.rs  validation.rs
crates/sim-lib-femm-ode/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-ode/recipes/: book.toml
crates/sim-lib-femm-ode/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-ode/recipes/01-basics/energy-rhs/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-ode/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-femm-physics/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-physics/recipes/: book.toml
crates/sim-lib-femm-physics/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-physics/recipes/01-basics/electrostatic-planar/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-physics/src/: implementation.rs  lib.rs
crates/sim-lib-femm-post/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-post/recipes/: book.toml
crates/sim-lib-femm-post/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-post/recipes/01-basics/energy-query/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-post/src/: implementation.rs  lib.rs  quantity.rs  solution.rs  tests.rs
crates/sim-lib-femm-prelude/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-prelude/recipes/: book.toml
crates/sim-lib-femm-prelude/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-prelude/recipes/01-basics/prelude-stack/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-prelude/src/: lib.rs  tests.rs
crates/sim-lib-femm-query/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-query/recipes/: book.toml
crates/sim-lib-femm-query/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-query/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-femm-sensitiv/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-sensitiv/recipes/: book.toml
crates/sim-lib-femm-sensitiv/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-sensitiv/recipes/01-basics/direct-gap/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-sensitiv/src/: expr_eval.rs  gradient_answer.rs  implementation.rs  lib.rs  nonlinear_adjoint.rs  sensitivity_mesh.rs  sensitivity_quantity.rs  sensitivity_solve.rs  sensitivity_types.rs  tests.rs  tests_support.rs  total_gradient.rs
crates/sim-lib-femm-sensitiv/tests/: review15_pow.rs
crates/sim-lib-femm-solve/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-solve/recipes/: book.toml
crates/sim-lib-femm-solve/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-solve/recipes/01-basics/sparse-lu/: purpose.md  recipe.toml  setup.siml
crates/sim-lib-femm-solve/src/: certificate.rs  export.rs  implementation.rs  lib.rs  steady.rs
crates/sim-lib-femm-space/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-space/recipes/: book.toml
crates/sim-lib-femm-space/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-space/src/: lib.rs
crates/sim-lib-femm-tape/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-femm-tape/recipes/: book.toml
crates/sim-lib-femm-tape/recipes/01-basics/: chapter.toml
crates/sim-lib-femm-tape/src/: implementation.rs  lib.rs
(+36 files in other folders)
