[package]
name = "sim-lib-femm-core"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Core FEMM types, stable ids, limits, errors, parameter sets, and scalar decoding."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-numeric = { version = "0.1.0" }
thiserror = "1"

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
