[package]
name = "sim-lib-femm-fixtures"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Deterministic FEMM model fixtures for codec, solve, ODE, and regression tests."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }
sim-lib-femm-geometry = { version = "0.1.0", path = "../sim-lib-femm-geometry" }
sim-lib-femm-material = { version = "0.1.0", path = "../sim-lib-femm-material" }
sim-lib-femm-mesh = { version = "0.1.0", path = "../sim-lib-femm-mesh" }
sim-lib-femm-physics = { version = "0.1.0", path = "../sim-lib-femm-physics" }
sim-lib-femm-post = { version = "0.1.0", path = "../sim-lib-femm-post" }
sim-lib-femm-solve = { version = "0.1.0", path = "../sim-lib-femm-solve" }

[dev-dependencies]
sim-lib-femm-function = { path = "../sim-lib-femm-function" }
