[package]
name = "sim-lib-femm-function"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Callable FEMM model functions for quantities, fields, solutions, and quality evidence."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-citizen = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }
sim-lib-femm-field = { version = "0.1.0", path = "../sim-lib-femm-field" }
sim-lib-femm-fixtures = { version = "0.1.0", path = "../sim-lib-femm-fixtures" }
sim-lib-femm-flow = { version = "0.1.0", path = "../sim-lib-femm-flow" }
sim-lib-femm-geometry = { version = "0.1.0", path = "../sim-lib-femm-geometry" }
sim-lib-femm-material = { version = "0.1.0", path = "../sim-lib-femm-material" }
sim-lib-femm-mesh = { version = "0.1.0", path = "../sim-lib-femm-mesh" }
sim-lib-femm-post = { version = "0.1.0", path = "../sim-lib-femm-post" }
sim-lib-femm-solve = { version = "0.1.0", path = "../sim-lib-femm-solve" }
sim-lib-numbers-func = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
