[package]
name = "sim-lib-femm-geometry"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib femm geometry."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
