[package]
name = "sim-lib-femm-mesh"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "FEMM model validation, deterministic meshing, and triangular mesh data structures."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }
sim-lib-femm-geometry = { version = "0.1.2", path = "../sim-lib-femm-geometry" }
sim-lib-femm-material = { version = "0.1.2", path = "../sim-lib-femm-material" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
