[package]
name = "sim-lib-femm-physics"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib femm physics."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-femm-assembly = { version = "0.1.0", path = "../sim-lib-femm-assembly" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }
sim-lib-femm-space = { version = "0.1.0", path = "../sim-lib-femm-space" }
sim-lib-numbers-ad = { version = "0.1.0" }

[dev-dependencies]
sim-lib-femm-material = { version = "0.1.0", path = "../sim-lib-femm-material" }
