[package]
name = "sim-lib-femm-query"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Shared FEMM model query callable substrate for function and sensitivity surfaces."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }
sim-lib-femm-field = { version = "0.1.0", path = "../sim-lib-femm-field" }
sim-lib-femm-geometry = { version = "0.1.0", path = "../sim-lib-femm-geometry" }
sim-lib-femm-material = { version = "0.1.0", path = "../sim-lib-femm-material" }
sim-lib-femm-mesh = { version = "0.1.0", path = "../sim-lib-femm-mesh" }
sim-lib-femm-post = { version = "0.1.0", path = "../sim-lib-femm-post" }
sim-lib-femm-solve = { version = "0.1.0", path = "../sim-lib-femm-solve" }
sim-lib-numbers-func = { version = "0.1.0" }

[dev-dependencies]
sim-lib-femm-fixtures = { version = "0.1.0", path = "../sim-lib-femm-fixtures" }
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
