[package]
name = "sim-lib-femm-tape"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Bounded solve cache keyed by FEMM model, mesh, parameter, and solver fingerprints."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-femm"
homepage = "https://github.com/sim-nest/sim-femm"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-femm-core = { version = "0.1.0", path = "../sim-lib-femm-core" }
sim-lib-femm-flow = { version = "0.1.0", path = "../sim-lib-femm-flow" }
sim-lib-femm-geometry = { version = "0.1.0", path = "../sim-lib-femm-geometry" }
sim-lib-femm-material = { version = "0.1.0", path = "../sim-lib-femm-material" }
sim-lib-femm-mesh = { version = "0.1.0", path = "../sim-lib-femm-mesh" }
sim-lib-femm-post = { version = "0.1.0", path = "../sim-lib-femm-post" }
sim-lib-femm-solve = { version = "0.1.0", path = "../sim-lib-femm-solve" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-value = { version = "0.1.0" }
